First pass of fixing overflow on modals

--- a/source/stylesheets/components/_modal.scss
+++ b/source/stylesheets/components/_modal.scss
@@ -32,7 +32,7 @@
   }
 
   @include mq($medium) {
-   //position: fixed;
+    //position: fixed;
   }
 
   .speakers {
@@ -52,9 +52,11 @@
     padding: 2em;
     margin: 1em;
     text-align: center;
-    max-width: 36em;
+    max-width: 33em;
     position: relative;
     display: inline-block;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 
     @include mq($large) {
       padding: 3em;
@@ -73,7 +75,7 @@
       mix-blend-mode: luminosity;
 
       &:before {
-        content: ' ';
+        content: " ";
         display: block;
         height: 80px;
         width: 80px;
@@ -129,6 +131,5 @@
         opacity: 0.6;
       }
     }
-
   }
 }
